# lidarpub

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TESTING.md  bitbucket-pipelines.yml  crates.js  depth.l16  help.html  index.html  lidarpub.default  sbom.json  settings.html  sonar-project.properties  src-files.js
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/scripts/: generate_sbom.sh  validate_notice.py
.github/workflows/: build.yml  release.yml  sbom.yml  test.yml
benches/: cluster_bench.rs  driver_bench.rs  format_points_bench.rs
edgefirst_lidarpub/: all.html  index.html  sidebar-items.js
edgefirst_lidarpub/cluster/: constant.CLUSTER_ID_FIRST.html  constant.CLUSTER_ID_GROUND.html  constant.CLUSTER_ID_NOISE.html  constant.INITIAL_TABLE_SIZE.html  constant.MAX_LOAD_FACTOR.html  constant.SENTINEL.html  constant.SLOT_EMPTY.html  constant.UNVISITED.html  constant.VISITED.html  enum.SpatialHashKind.html  fn.cluster_.html  fn.compute_valid.html  fn.expand_cluster.html  fn.voxel_cluster.html  index.html  sidebar-items.js  struct.ClusterData.html  struct.FlatSpatialHash.html  struct.SpatialHash.html  struct.VoxelClusterData.html
edgefirst_lidarpub/common/: enum.TimestampMode.html  fn.set_process_priority.html  fn.set_socket_bufsize.html  index.html  sidebar-items.js
edgefirst_lidarpub/formats/: enum.PointFieldType.html  fn.clustered_xyz_fields.html  fn.format_clustered_17byte.html  fn.format_clustered_17byte_into.html  fn.format_points_13byte.html  fn.format_points_13byte_into.html  fn.standard_xyz_intensity_fields.html  index.html  sidebar-items.js
edgefirst_lidarpub/ground/: constant.AZIMUTH_BIN_SIZE.html  constant.ELEVATION_TOLERANCE.html  constant.EMA_ALPHA.html  constant.FLATNESS_THRESH.html  constant.K_SEEDS.html  constant.MAX_RANGE.html  constant.MIN_ACCEPTED_PATCHES.html  constant.MIN_RANGE_M.html  constant.MIN_SEEDS.html  constant.N_AZIMUTH.html  constant.N_PATCHES.html  constant.N_RANGE.html  constant.RANGE_BIN_SIZE.html  constant.UPRIGHTNESS_THRESH.html  fn.eigenvector_for.html  fn.gravity_frame.html  fn.smallest_eigenvalue_index.html  fn.sym3x3_eigen.html  index.html  sidebar-items.js  struct.GroundFilter.html
edgefirst_lidarpub/lidar/: enum.Error.html  enum.SensorType.html  fn.timestamp.html  index.html  sidebar-items.js  struct.Points.html  trait.LidarDriver.html  trait.LidarFrame.html  trait.LidarFrameWriter.html
edgefirst_lidarpub/ouster/: constant.MAX_PACKET_SIZE.html  enum.AlertStatus.html  enum.Error.html  enum.ShotLimiting.html  enum.ShutdownStatus.html  fn.timestamp.html  index.html  sidebar-items.js  struct.BeamIntrinsics.html  struct.ColumnHeader.html  struct.ColumnHeaderSlice.html  struct.Config.html  struct.DataBlock.html  struct.FrameBuilder.html  struct.FrameReader.html  struct.Header.html  struct.HeaderSlice.html  struct.LidarDataFormat.html  struct.OusterDriver.html  struct.OusterLidarFrame.html  struct.Parameters.html  struct.Points.html  struct.SensorInfo.html
edgefirst_lidarpub/packet_source/: index.html  sidebar-items.js  struct.LoopingTestSource.html  struct.TestSource.html  struct.UdpSource.html  trait.PacketSource.html
edgefirst_lidarpub/robosense/: constant.BLOCKS_PER_PACKET.html  constant.BLOCK_SIZE.html  constant.DIFOP_PACKET_SIZE.html  constant.DIFOP_SYNC.html  constant.DIRECTION_SCALE.html  constant.DISTANCE_RESOLUTION.html  constant.MSOP_HEADER_SIZE.html  constant.MSOP_PACKET_SIZE.html  constant.MSOP_SYNC.html  constant.POINTS_PER_FRAME.html  enum.ReturnMode.html  enum.TimeSyncMode.html  enum.TimeSyncStatus.html  index.html  sidebar-items.js  struct.DeviceInfo.html  struct.ImuData.html  struct.MsopHeader.html  struct.RobosenseDriver.html  struct.RobosenseLidarFrame.html
examples/: lidar_viewer.rs  pcap_viewer.rs
examples/lidar_rerun/: common.rs  main.rs
search.index/: 00bc18aaa303.js  019d55970292.js  01ccef3c141b.js  0443ff728a1c.js  04fc3b2c696e.js  0552b2ab0fa5.js  0d9f73a7c706.js  104cce169ef2.js  133003465dc4.js  1507ca349500.js  157db7fd34cc.js  15ad47889890.js  16f9ffb0c28e.js  1853b0e17880.js  18d8d04eae7a.js  1b1ed8434f19.js  1b6f5611490f.js  1e670d06f2f1.js  22f9d3af7566.js  236abf9ba6ce.js  23af150ef051.js  2946020855b9.js  29e877eca473.js  2b9aab845fe2.js  2dc5c8576070.js  3356a4d993e2.js  372e1449dd30.js  37d6473cae16.js  39ec26dfd8be.js  3daf10c53087.js  3e40fae46559.js  3f16b228d8dc.js  430f78836842.js  45d60f6b890a.js  4713bf7d003f.js  4942207e6176.js  4ba4b876095e.js  4ca4b36e5b7e.js  50428e107c47.js  50db83d5f5bd.js  (+24 more)
search.index/crateNames/: ac13f551eda4.js
search.index/desc/: 1bd9f11bd346.js  e8e731349775.js
search.index/entry/: 1d8792456897.js  bf80547c57fd.js
search.index/function/: 3071e87cd99f.js  aad21fa0f68b.js
search.index/generic_inverted_index/: 361572f88939.js  da01437be3b8.js
search.index/name/: 269019433aaf.js  b23da1079eb0.js
search.index/normalizedName/: 6a616d27cc43.js  7f5e9f1a1ac5.js
search.index/path/: 06797956b6b2.js  76cd0951faa8.js
search.index/type/: 234bfb6b34e7.js  3e3c1bdb955c.js
src/: args.rs  buffer.rs  cluster.rs  cluster_thread.rs  common.rs  formats.rs  ground.rs  lib.rs  lidar.rs  main.rs  ouster.rs  packet_source.rs  pcap_source.rs  rerun.rs  robosense.rs
src/edgefirst_lidarpub/: cluster.rs.html  common.rs.html  formats.rs.html  ground.rs.html  lib.rs.html  lidar.rs.html  ouster.rs.html  packet_source.rs.html  robosense.rs.html
testdata/: README.md  e1r_frame0.pcd  e1r_frame5.pcd  e1r_frames.pcap  os1_frame0.pcd  os1_frame3.pcd  os1_frames.pcap  os1_sensor_info.json
tests/: ouster_pcap_test.rs  robosense_pcap_test.rs
trait.impl/clap_builder/derive/: trait.ValueEnum.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
(+14 files in other folders)
