[package]
name = "lidarpub"
description = "EdgeFirst LiDAR Publisher"
repository = "https://github.com/EdgeFirstAI/lidarpub"
license = "Apache-2.0"
version = "1.4.0"
edition = "2024"

[[example]]
name = "lidar_rerun"
required-features = ["rerun"]

[features]
default = ["tracy"]
rerun = ["dep:rerun", "dep:etherparse", "dep:pcap-parser"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
edgefirst-schemas = "1.4.1"
env_logger = "0.11.8"
etherparse = { version = "0.19.0", optional = true }
kanal = { git = "https://github.com/fereidani/kanal", rev = "b6aeab2" }
libc = "0.2.176"
log = "0.4.28"
ndarray = "0.17.1"
pcap-parser = { version = "0.17.0", optional = true }
rerun = { version = "0.27.2", optional = true, features = ["clap"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.3", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
ureq = { version = "3.1.4", features = ["json"] }
zenoh = "1.6.2"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true
