[package]
name = "edgefirst-lidarpub"
description = "EdgeFirst LiDAR Publisher"
repository = "https://github.com/EdgeFirstAI/lidarpub"
license = "Apache-2.0"
version = "1.4.2"
edition = "2024"

[[bin]]
name = "edgefirst-lidarpub"
path = "src/main.rs"

[[example]]
name = "lidar_viewer"
required-features = ["rerun"]

[features]
default = ["tracy"]
# Enable portable_simd for non-aarch64 targets when using nightly Rust.
# On aarch64, native NEON intrinsics are always used regardless of this feature.
portable_simd = []
rerun = ["dep:rerun", "dep:etherparse", "dep:pcap-parser"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
clap = { version = "4.5.57", features = ["derive", "env"] }
edgefirst-schemas = "1.5.2"
env_logger = "0.11.8"
etherparse = { version = "0.19.0", optional = true }
kanal = { git = "https://github.com/fereidani/kanal", rev = "b6aeab2" }
libc = "0.2.180"
log = "0.4.29"
ndarray = "0.17.2"
pcap-parser = { version = "0.17.0", optional = true }
rerun = { version = "0.29.0", optional = true, features = ["clap"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.44"
tracing-journald = "0.3.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
ureq = { version = "3.1.4", features = ["json"] }
zenoh = "1.7.2"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[[bench]]
name = "format_points_bench"
harness = false
